refactor preprocessing code

--- a/notebooks/data_processing_final.ipynb
+++ b/notebooks/data_processing_final.ipynb
@@ -90,54 +90,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "PROCESS_DATA = Path(\"../data/processed_data\")\n",
+    "RAW_DATA = Path(\"../data\")\n",
+    "\n",
+    "PROCESS_DATA.mkdir(exist_ok=True)\n",
+    "RAW_DATA.mkdir(exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-02-03T14:13:26.515621Z",
      "start_time": "2020-02-03T14:13:19.581858Z"
     }
    },
-   "outputs": [],
-   "source": [
-    "train_df = pd.read_csv(\"../data/train.csv\")\n",
-    "\n",
-    "for i in range(4):\n",
-    "\n",
-    "df = pd.read_parquet(f'../data/train_image_data_{0}.parquet')\n",
-    "merged_df = df.merge(train_df, on=\"image_id\")\n",
-    "\n",
-    "image_name = merged_df[\"image_id\"]\n",
-    "label = merged_df[[\"grapheme_root\",\"vowel_diacritic\",\"consonant_diacritic\"]].astype(np.uint8)\n",
-    "image = merged_df.drop([\"image_id\", \"grapheme_root\",\"vowel_diacritic\",\"consonant_diacritic\", \"grapheme\"], axis=1).values\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "??proces_image"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "==================== 0 ==================\n",
       "1.5118995979428291\n",
-      "3.025035858154297\n"
+      "7.391014099121094\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█| 50210/50210 [02:21<00:00, 353.72it/s]\n"
+      "100%|███████████████████████████████████████████| 50210/50210 [02:16<00:00, 368.33it/s]\n"
      ]
     },
     {
@@ -147,31 +135,106 @@
       "2\n",
       "0\n",
       "2.3463155031204224\n",
-      "9.236946105957031\n"
+      "10.506282806396484\n",
+      "==================== 1 ==================\n",
+      "1.5118995979428291\n",
+      "7.551418304443359\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████████| 50210/50210 [02:01<00:00, 413.03it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "0\n",
+      "2.3463155031204224\n",
+      "10.441497802734375\n",
+      "==================== 2 ==================\n",
+      "1.5118995979428291\n",
+      "7.56585693359375\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████████| 50210/50210 [01:07<00:00, 748.53it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "0\n",
+      "2.3463155031204224\n",
+      "10.22265625\n",
+      "==================== 3 ==================\n",
+      "1.5118995979428291\n",
+      "7.864200592041016\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████████| 50210/50210 [01:01<00:00, 812.48it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "0\n",
+      "2.3463155031204224\n",
+      "10.724590301513672\n"
      ]
     }
    ],
    "source": [
-    "# full image processing\n",
-    "image = image * 1\n",
+    "train_df = pd.read_csv(\"../data/train.csv\")\n",
     "\n",
-    "print(getsizeof(image)/1024/1024/1024)\n",
-    "print(psutil.virtual_memory()[4]/1024/1024/1024)\n",
+    "for i in range(4):\n",
+    "    print(f\"==================== {i} ==================\")\n",
+    "    fn = f\"train_image_data_{i}.parquet\"\n",
+    "    process_fn = f\"train_data_{i}.pickle\"\n",
+    "    df = pd.read_parquet(RAW_DATA/fn)\n",
+    "    \n",
+    "    \n",
+    "    if (PROCESS_DATA/process_fn).is_file():\n",
+    "        print(f'parquet {i} processed already, skipped')\n",
+    "        continue\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    merged_df = df.merge(train_df, on=\"image_id\")\n",
     "\n",
-    "image = proces_image(image)\n",
-    "print(gc.collect())\n",
-    "print(getsizeof(image)/1024/1024/1024)\n",
-    "print(psutil.virtual_memory()[4]/1024/1024/1024)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(\"train_data_0.pickle\", \"wb\") as f:\n",
-    "    pickle.dump(image, f)"
+    "    image_name = merged_df[\"image_id\"]\n",
+    "    label = merged_df[[\"grapheme_root\",\"vowel_diacritic\",\"consonant_diacritic\"]].astype(np.uint8)\n",
+    "    image = merged_df.drop([\"image_id\", \"grapheme_root\",\"vowel_diacritic\",\"consonant_diacritic\", \"grapheme\"], axis=1).values\n",
+    "\n",
+    "    \n",
+    "    # full image processing\n",
+    "    image = image * 1\n",
+    "\n",
+    "    print(getsizeof(image)/1024/1024/1024)\n",
+    "    print(psutil.virtual_memory()[4]/1024/1024/1024)\n",
+    "\n",
+    "    image = proces_image(image)\n",
+    "    print(gc.collect())\n",
+    "    print(getsizeof(image)/1024/1024/1024)\n",
+    "    print(psutil.virtual_memory()[4]/1024/1024/1024)\n",
+    "    \n",
+    "    with open(PROCESS_DATA/process_fn, \"wb\") as f:\n",
+    "        pickle.dump(image, f)"
    ]
   },
   {
@@ -214,7 +277,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
