force notebook to pair py

--- a/notebooks/self-exploration.ipynb
+++ b/notebooks/self-exploration.ipynb
@@ -1938,6 +1938,9 @@
   }
  ],
  "metadata": {
+  "jupytext": {
+   "formats": "ipynb,py"
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
