--- a/notebooks/model_1_desent50.ipynb
+++ b/notebooks/model_1_desent50.ipynb
@@ -767,6 +767,9 @@
   }
  ],
  "metadata": {
+  "jupytext": {
+   "formats": "ipynb,py"
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
