--- a/notebooks/model_2_kaggle_desnet-Copy1.ipynb
+++ b/notebooks/model_2_kaggle_desnet-Copy1.ipynb
@@ -2253,6 +2253,9 @@
   }
  ],
  "metadata": {
+  "jupytext": {
+   "formats": "ipynb,py"
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
