--- a/notebooks/model_2_kaggle_desnet.ipynb
+++ b/notebooks/model_2_kaggle_desnet.ipynb
@@ -2814,6 +2814,9 @@
   }
  ],
  "metadata": {
+  "jupytext": {
+   "formats": "ipynb,py"
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
