--- a/notebooks/model_3_efficient_net_with_mixup.ipynb
+++ b/notebooks/model_3_efficient_net_with_mixup.ipynb
@@ -657,6 +657,9 @@
   }
  ],
  "metadata": {
+  "jupytext": {
+   "formats": "ipynb,py"
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
