--- a/notebooks/planned_to_delete_model_3_efficient_net.ipynb
+++ b/notebooks/planned_to_delete_model_3_efficient_net.ipynb
@@ -1560,6 +1560,9 @@
   }
  ],
  "metadata": {
+  "jupytext": {
+   "formats": "ipynb,py"
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
