--- a/notebooks/study_model_arch.ipynb
+++ b/notebooks/study_model_arch.ipynb
@@ -1615,6 +1615,9 @@
   }
  ],
  "metadata": {
+  "jupytext": {
+   "formats": "ipynb,py"
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
