--- a/notebooks/data_processing_final.ipynb
+++ b/notebooks/data_processing_final.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-03T14:13:19.079171Z",
-     "start_time": "2020-02-03T14:13:18.563805Z"
+     "end_time": "2020-02-05T13:47:27.467490Z",
+     "start_time": "2020-02-05T13:47:26.373425Z"
     }
    },
    "outputs": [],
@@ -29,11 +29,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-03T14:13:19.087666Z",
-     "start_time": "2020-02-03T14:13:19.081052Z"
+     "end_time": "2020-02-05T13:47:28.839192Z",
+     "start_time": "2020-02-05T13:47:28.772373Z"
     }
    },
    "outputs": [],
@@ -90,12 +90,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-02-05T13:53:08.953798Z",
+     "start_time": "2020-02-05T13:53:08.946817Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
-    "PROCESS_DATA = Path(\"../data/processed_data\")\n",
+    "PROCESS_DATA = Path(\"../data/processed_data/size_224\")\n",
     "RAW_DATA = Path(\"../data\")\n",
     "\n",
     "PROCESS_DATA.mkdir(exist_ok=True)\n",
@@ -104,11 +109,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-03T14:13:26.515621Z",
-     "start_time": "2020-02-03T14:13:19.581858Z"
+     "start_time": "2020-02-05T13:53:09.851Z"
     }
    },
    "outputs": [
@@ -118,14 +122,14 @@
      "text": [
       "==================== 0 ==================\n",
       "1.5118995979428291\n",
-      "7.391014099121094\n"
+      "67.63985443115234\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████| 50210/50210 [02:16<00:00, 368.33it/s]\n"
+      "100%|█| 50210/50210 [01:12<00:00, 697.18it/s]\n"
      ]
     },
     {
@@ -135,17 +139,17 @@
       "2\n",
       "0\n",
       "2.3463155031204224\n",
-      "10.506282806396484\n",
+      "66.96660995483398\n",
       "==================== 1 ==================\n",
       "1.5118995979428291\n",
-      "7.551418304443359\n"
+      "67.62932586669922\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████| 50210/50210 [02:01<00:00, 413.03it/s]\n"
+      "100%|█| 50210/50210 [01:25<00:00, 586.13it/s]\n"
      ]
     },
     {
@@ -155,47 +159,8 @@
       "2\n",
       "0\n",
       "2.3463155031204224\n",
-      "10.441497802734375\n",
-      "==================== 2 ==================\n",
-      "1.5118995979428291\n",
-      "7.56585693359375\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|███████████████████████████████████████████| 50210/50210 [01:07<00:00, 748.53it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n",
-      "0\n",
-      "2.3463155031204224\n",
-      "10.22265625\n",
-      "==================== 3 ==================\n",
-      "1.5118995979428291\n",
-      "7.864200592041016\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|███████████████████████████████████████████| 50210/50210 [01:01<00:00, 812.48it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n",
-      "0\n",
-      "2.3463155031204224\n",
-      "10.724590301513672\n"
+      "48.195831298828125\n",
+      "==================== 2 ==================\n"
      ]
     }
    ],
@@ -234,7 +199,8 @@
     "    print(psutil.virtual_memory()[4]/1024/1024/1024)\n",
     "    \n",
     "    with open(PROCESS_DATA/process_fn, \"wb\") as f:\n",
-    "        pickle.dump(image, f)"
+    "#         pickle.dump(image, f)\n",
+    "        pickle.dump((image, image_name, label.values), f)\n"
    ]
   },
   {
@@ -251,7 +217,8 @@
     "ExecuteTime": {
      "end_time": "2020-02-03T14:13:27.086555Z",
      "start_time": "2020-02-03T14:13:26.517312Z"
-    }
+    },
+    "lines_to_next_cell": 2
    },
    "outputs": [
     {
@@ -271,14 +238,15 @@
     "print(psutil.virtual_memory()[4]/1024/1024/1024)\n",
     "image = image * 1\n",
     "print(getsizeof(image)/1024/1024/1024)\n",
-    "print(psutil.virtual_memory()[4]/1024/1024/1024)\n"
+    "print(psutil.virtual_memory()[4]/1024/1024/1024)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "lines_to_next_cell": 2
    },
    "outputs": [
     {
@@ -311,7 +279,7 @@
     "print(getsizeof(image)/1024/1024/1024)\n",
     "\n",
     "image = image.reshape(-1, HEIGHT, WIDTH).astype(np.uint8)\n",
-    "print(getsizeof(image)/1024/1024/1024)\n"
+    "print(getsizeof(image)/1024/1024/1024)"
    ]
   },
   {
