--- a/notebooks/model_3_efficient_net_with_mixup.ipynb
+++ b/notebooks/model_3_efficient_net_with_mixup.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-03T13:28:47.464287Z",
-     "start_time": "2020-02-03T13:28:47.448329Z"
+     "end_time": "2020-02-05T13:36:32.549599Z",
+     "start_time": "2020-02-05T13:36:32.499734Z"
     }
    },
    "outputs": [],
@@ -17,12 +17,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-03T13:28:55.479831Z",
-     "start_time": "2020-02-03T13:28:47.591306Z"
+     "end_time": "2020-02-05T13:37:59.002742Z",
+     "start_time": "2020-02-05T13:37:58.878076Z"
     }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'torchtools' from 'C:\\\\Users\\\\CHANNO.OOCLDM\\\\AppData\\\\Local\\\\Continuum\\\\anaconda3\\\\lib\\\\site-packages\\\\torchtools\\\\__init__.py'>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torchtools"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-02-05T13:38:46.928664Z",
+     "start_time": "2020-02-05T13:38:46.809980Z"
+    },
+    "lines_to_end_of_cell_marker": 2
    },
    "outputs": [],
    "source": [
@@ -30,8 +56,7 @@
     "import os\n",
     "\n",
     "import numpy as np\n",
-    "import torch.optim as optim\n",
-    "\n",
+    "import torch.optim as optima\n",
     "from efficientnet_pytorch import EfficientNet\n",
     "from torch import nn\n",
     "from torch.utils.data import Dataset, DataLoader\n",
@@ -44,21 +69,20 @@
     "from hw_grapheme.model import EfficientNet_grapheme, EfficientNet_0\n",
     "from hw_grapheme.loss_func import Loss_combine\n",
     "\n",
-    "from torchtools.optim import RangerLars, RAdam\n",
+    "# from torchtools.optim import RangerLars, RAdam\n",
     "# from one_cycle import OneCycleLR\n",
     "from torch.optim import Optimizer\n",
     "\n",
-    "# from warmup_scheduler import GradualWarmupScheduler\n",
-    "\n"
+    "# from warmup_scheduler import GradualWarmupScheduler"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-03T13:28:55.495532Z",
-     "start_time": "2020-02-03T13:28:55.481882Z"
+     "end_time": "2020-02-05T13:39:11.023817Z",
+     "start_time": "2020-02-05T13:39:10.905357Z"
     }
    },
    "outputs": [],
@@ -78,11 +102,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-03T13:29:15.585298Z",
-     "start_time": "2020-02-03T13:28:55.498537Z"
+     "end_time": "2020-02-05T13:50:23.469349Z",
+     "start_time": "2020-02-05T13:50:23.310775Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "??load_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-02-05T13:57:36.819055Z",
+     "start_time": "2020-02-05T13:57:33.255564Z"
     }
    },
    "outputs": [
@@ -108,11 +146,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-03T13:32:10.949067Z",
-     "start_time": "2020-02-03T13:32:10.924058Z"
+     "end_time": "2020-02-05T13:58:31.288388Z",
+     "start_time": "2020-02-05T13:58:31.170701Z"
     }
    },
    "outputs": [
@@ -131,7 +169,7 @@
        "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0]], dtype=uint8)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,11 +180,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-25T13:17:01.895416Z",
-     "start_time": "2020-01-25T13:17:00.520934Z"
+     "end_time": "2020-02-05T13:58:43.029952Z",
+     "start_time": "2020-02-05T13:58:33.917344Z"
     }
    },
    "outputs": [
@@ -256,7 +294,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2020-01-25T13:18:51.475Z"
+     "start_time": "2020-02-05T13:59:04.723Z"
     },
     "scrolled": true
    },
@@ -275,212 +313,24 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cfd0d9802db94e8ab2d9f20523a3a48b",
+       "model_id": "c1c218a4f8884ceaa24a1ce4884964c4",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=2511.0), HTML(value='')))"
+       "HBox(children=(IntProgress(value=0, max=620), HTML(value='')))"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n",
-      "Train Loss: 4.2113, root_acc: 0.2791, vowel_acc: 0.5325, consonant_acc: 0.6941, combined_acc: 0.4462\n"
+      "C:\\Users\\CHANNO.OOCLDM\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\torch\\cuda\\nccl.py:24: UserWarning: PyTorch is not compiled with NCCL support\n",
+      "  warnings.warn('PyTorch is not compiled with NCCL support')\n"
      ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c4b329267c7f4544b2620cf1e49b96ea",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=628.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Val Loss: 0.5711, root_acc: 0.8462, vowel_acc: 0.9529, consonant_acc: 0.9545, combined_acc: 0.9000\n",
-      "In epoch 0, highest val accuracy increases from 0.0 to 0.8999576777534355.\n",
-      "In epoch 0, lowest val loss decreases from 999 to 0.571108176945168.\n",
-      "\n",
-      "Epoch 1/119\n",
-      "----------\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a6238f2be67644f384478177c6ed0e21",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=2511.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Train Loss: 2.7981, root_acc: 0.4307, vowel_acc: 0.5844, consonant_acc: 0.7273, combined_acc: 0.5433\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "064788b78874420c8181ba91181027bb",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=628.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Val Loss: 0.4671, root_acc: 0.8833, vowel_acc: 0.9651, consonant_acc: 0.9664, combined_acc: 0.9245\n",
-      "In epoch 1, highest val accuracy increases from 0.8999576777534355 to 0.924535700059749.\n",
-      "In epoch 1, lowest val loss decreases from 0.571108176945168 to 0.4671443725838364.\n",
-      "\n",
-      "Epoch 2/119\n",
-      "----------\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8d3631ff22d8448e85b5608cd5fbbe51",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=2511.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Train Loss: 2.5066, root_acc: 0.4463, vowel_acc: 0.5861, consonant_acc: 0.7271, combined_acc: 0.5515\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a4866d5f4bfa4a8fb1aeba491a7c38ef",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=628.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Val Loss: 0.3295, root_acc: 0.9147, vowel_acc: 0.9719, consonant_acc: 0.9709, combined_acc: 0.9431\n",
-      "In epoch 2, highest val accuracy increases from 0.924535700059749 to 0.9430579067914757.\n",
-      "In epoch 2, lowest val loss decreases from 0.4671443725838364 to 0.3294725690650598.\n",
-      "\n",
-      "Epoch 3/119\n",
-      "----------\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "55ae5686c674439c956c9fca6f7e9ca6",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=2511.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Train Loss: 2.4701, root_acc: 0.4536, vowel_acc: 0.5905, consonant_acc: 0.7304, combined_acc: 0.5570\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "65ad0f0f07c849c4834fa40e34dc3013",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=628.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Val Loss: 0.2970, root_acc: 0.9167, vowel_acc: 0.9768, consonant_acc: 0.9752, combined_acc: 0.9463\n",
-      "In epoch 3, highest val accuracy increases from 0.9430579067914757 to 0.946337880900219.\n",
-      "In epoch 3, lowest val loss decreases from 0.3294725690650598 to 0.2969867363794703.\n",
-      "\n",
-      "Epoch 4/119\n",
-      "----------\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "26bf883125d24121a88275bbee3ce8da",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=2511.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -548,11 +398,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-23T17:54:26.204272Z",
-     "start_time": "2020-01-23T17:54:26.180340Z"
+     "start_time": "2020-02-05T13:59:12.457Z"
     }
    },
    "outputs": [],
@@ -575,35 +424,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-24T01:29:27.962758Z",
-     "start_time": "2020-01-24T01:29:27.937492Z"
-    }
+     "start_time": "2020-02-05T13:59:12.807Z"
+    },
+    "lines_to_next_cell": 2
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'model': 'efficient 0',\n",
-       " 'pretrain': False,\n",
-       " 'head_info': '1 fc',\n",
-       " 'input_size': '224X224',\n",
-       " 'optimizer': 'adam',\n",
-       " 'n_fold': 5,\n",
-       " 'split_seed': 2020,\n",
-       " 'batch_size': 64,\n",
-       " 'epoch': 64,\n",
-       " 'mixed_precision': False,\n",
-       " 'image_processing': 'mixup, cutmix'}"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "save_root_dir = \"../model_weights/eff_0_baseline\"\n",
     "\n",
@@ -612,7 +440,7 @@
     "\n",
     "with open(config_save_path, \"w\") as f:\n",
     "    for key in configs.keys():\n",
-    "        f.write(f\"{key},{configs[key]}\\n\")\n"
+    "        f.write(f\"{key},{configs[key]}\\n\")"
    ]
   },
   {
@@ -620,9 +448,9 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-23T07:15:53.433438Z",
-     "start_time": "2020-01-23T07:14:54.712Z"
-    }
+     "start_time": "2020-02-05T13:59:13.332Z"
+    },
+    "lines_to_next_cell": 0
    },
    "outputs": [],
    "source": [
@@ -651,15 +479,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
-  "jupytext": {
-   "formats": "ipynb,py"
-  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -675,7 +502,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.4"
   },
   "toc": {
    "base_numbering": 1,
